Distributed classes in several packages. Several bug fixes.